css: nav relative padding to avoid map overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  padding: 0 0 20px 0;
   background-color: #252831;
   text-align:center;
 }
@@ -61,9 +61,9 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 16pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   text-transform: uppercase;
 }
 #breadcrumb {
@@ -123,7 +123,7 @@ nav h1 a {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Reset select properties */
+/* Reset select browser properties */
 select::-ms-expand {
   display: none;
 }
@@ -136,7 +136,6 @@ select {
   padding-left: 5%;
   border: 0 !important;
   background: #6789aa;
-  /* letter-spacing: 5px; */
   color: white;
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif;
@@ -186,7 +185,6 @@ select {
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   text-align: left;
-  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
